update mvn files